--- a/css/admin.css
+++ b/css/admin.css
@@ -1,7 +1,7 @@
-.header-page {
+body {
     margin: 0;
     padding: 0;
-    background-color: #69140E ;
+    background: url(http://serfitmex.com.mx/wp-content/uploads/2019/08/E-021.jpeg);
     background-size: cover;
     height: 50 hv;
 }
