--- a/css/formulariosadmin.css
+++ b/css/formulariosadmin.css
@@ -1,7 +1,21 @@
 body{
     font-family: 'Roboto Slab', serif;
-    background: url(https://billmarnich.com/wp-content/uploads/2017/02/Kettlebell-STACK.jpg);
-   
+    /* background: url(https://billmarnich.com/wp-content/uploads/2017/02/Kettlebell-STACK.jpg); */
+    background-image: url('../img/backadmin3.jpeg');
+    content: ' ';
+    height: 100 hv;
+    
+}
+
+body::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #dee2e66b;
 }
 
 .nav-link{
@@ -14,16 +28,29 @@ a:hover{
 }
 .formUser, .formActividad{
 
+   margin: auto;
+
+    max-width: 800px;
     background-color: white;
     margin-top: 60px;
-    padding: 20px;
-    box-shadow: 1px 1px 8px #666;     
+    justify-content: center;
+    padding: 55px 55px 30px;
+    box-shadow: 6px 6px 8px #666;     
     font-size: 18px;
      
      
 }
-
- .btn{
+.btn, .btnformulario{
+    border: none;
+    outline: none;
+    width: 8rem;
+    height: 40px;
+    background-color: #69140E ;
+    color: #ffffff;
+    font-size: 15px;
+    border-radius: 20px ;
+}
+ /* .btn{
     border: none;
     outline: none;
     height: 40px;
@@ -31,13 +58,16 @@ a:hover{
     color: #ffffff;
     font-size: 15px;
     border-radius: 20px ;
-}
+} */
 
  .btn:hover{
      background-color:  #69140E ;
     color: whitesmoke;
 }
 
-input:hover{
-    color: white;
+.listadousuarios, .listadoactividades{
+    margin-top: 60px;
+   background-color: #e9ecefdb;
+   box-shadow: 4px 4px 10px #666;    
 }
+
