--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,8 @@
 .footer{
+    margin-top:200px;
     background-color: black;
     color:#737373;
-    padding: 35px 0px 15px;
+    padding: 25px 0px 15px;
     font-size:15px;
     list-style: none;
 }
